# octo-machine

./: .gitignore  diagrama_troca_mensagens.md  ideias.md  run.sh
backend/: pyproject.toml
backend/app/: backstage.py  backstage_prompt.py  config.py  feature_flags.py  game_clock.py  internal_acrobatics.py  logging_config.py  main.py  messaging.py  participants.py  reconciliation.py  reconciliation_prompt.py  session_state.py  system_prompt.py
backend/app/game/: casa_fatso.json  steps.md  uma_noite_de_trabalho.dot  uma_noite_de_trabalho.json  uma_noite_de_trabalho.md
backend/app/game/duelo/: duelo.json
backend/app/game/sala_branca/: sala_branca.json
backend/app/game/uma_noite_de_trabalho/: role_world_papel.md  uma_noite_de_trabalho.json
backend/app/narrator_prompt/: __init__.py  assemble.py  closing_reminder.py  helpers.py  section_acrobatics_fatigue.py  section_layered_description.py  section_markdown_formatting.py  section_message_economy.py  section_player_agency.py  section_pov.py  section_role_world.py  section_scene_image_note.py  section_space_direction.py  section_tools_dice.py  section_tools_move.py  section_tools_move_and_dice.py
backend/prompts/: narrator_system_prompt.md  role_world_papel.md  role_world_papel_v0.md
backend/tests/: narrator_prompt_full_app_config.py  test_llm_secret_leak_eval.py  test_move_details_visibility.py  test_system_prompt_rules.py
backend/tools/: __init__.py  action_outcome.py  invoke.py  move.py  random_integer.py  roll_dice.py  toss_coin.py
frontend/: .gitignore  index.html  package-lock.json  package.json  (+1 more)
(+7 files in other folders)
