[project]
name = "octo-chat-backend"
version = "0.1.0"
description = "WebSocket chat API with OpenAI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.57.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "tools"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
